--- a/app/src/main/res/layout/content_turnos.xml
+++ b/app/src/main/res/layout/content_turnos.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp">
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,7 +41,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -56,7 +67,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -88,7 +99,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -119,7 +130,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -146,7 +157,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -177,7 +188,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -208,7 +219,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -235,7 +246,7 @@
 
         <Space
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="15dp"
             android:layout_column="0" />
     </TableRow>
 
@@ -260,6 +271,44 @@
             android:textSize="20dp"
             android:layout_width="wrap_content" />
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="15dp"
+                android:layout_column="0" />
+        </TableRow>
+
     </TableRow>
 
 </TableLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        >
+
+        <Button
+            android:id="@+id/boton_dia_anterior"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Anterior"
+            />
+
+        <Button
+            android:id="@+id/boton_dia_siguiente"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Siguiente"
+            />
+
+    </LinearLayout>
+
+</LinearLayout>
